<resources>
	<string name="splash_screen_title">ANT</string>
	<string name="error_no_internet">No internet connection\navailable</string>
	<string name="error_no_data">No data available.</string>
	<string name="error_history_no_data_no_connection">No internet connection. Loading data failed.</string>
	<string name="main_dialog_registration_title">Registration…</string>
	<string name="main_dialog_registration_text">Client is being registered. Please wait…</string>
	<string name="main_dialog_reload_title">Reloading…</string>
	<string name="main_dialog_reload_text">Reloading data; please wait…</string>
	<string name="preferences">Settings</string>
	<string name="preferences_contract_dl_mbits">Download Mbit/s</string>
	<string name="preferences_contract_dl_mbits_sum">Download Mbit/s of your contract</string>
	<string name="preferences_contract_ul_mbits">Upload Mbit/s</string>
	<string name="preferences_contract_ul_mbits_sum">Upload Mbit/s of your contract</string>
	<string name="preferences_contract_name">Contract name</string>
	<string name="preferences_contract_name_sum">Contract name</string>
	<string name="preferences_play_jingle">Sound</string>
	<string name="preferences_play_jingle_sum">Play jingle on test start and test end</string>
	<string name="preferences_category_test">Preferences</string>
	<string name="preferences_category_contract_info">Contract information</string>
	<string name="preferences_category_nerd_mode">Nerd mode</string>
	<string name="preferences_nerd_mode">Nerd mode</string>
	<string name="preferences_nerd_mode_sum">Show andvanced information</string>
	<string name="preferences_enable_qos">QoS measurements</string>
	<string name="preferences_enable_qos_sum">Enable QoS measurements</string>
	<string name="preferences_location_settings">Location</string>
	<string name="preferences_location_settings_sum">Change location settings</string>
	<string name="preferences_language_settings">Language</string>
	<string name="preferences_language_settings_sum">Change language settings</string>
	<string name="preferences_no_gps">No GPS</string>
	<string name="preferences_no_gps_sum">Do not use GPS during test</string>
	<string name="preferences_tag">Tag</string>
	<string name="preferences_tag_sum">Add a custom tag to each measurement</string>
	<string name="preferences_loop_mode">Loop</string>
	<string name="preferences_loop_mode_sum">Measurements will re-run in a loop</string>
	<string name="preferences_loop_mode_max_tests">Loop max tests</string>
	<string name="preferences_loop_mode_max_tests_sum">Maximum amount of measurements to run if loop mode is active (0 = run forever)</string>
	<string name="preferences_loop_mode_min_delay">Loop min delay</string>
	<string name="preferences_loop_mode_min_delay_sum">Minimum time in seconds between two measurements if loop mode is active</string>
	<string name="preferences_loop_mode_max_delay">Loop max delay</string>
	<string name="preferences_loop_mode_max_delay_sum">Maximum time in seconds between two measurements if loop mode is active</string>
	<string name="preferences_loop_mode_movement">Loop movement</string>
	<string name="preferences_loop_mode_movement_sum">Movement in meters to trigger next measurement in loop mode</string>
	<string name="preferences_loop_mode_gps">Use GPS when loop mode is active</string>
	<string name="preferences_loop_mode_gps_sum">Use GPS between two measurements in loop mode</string>
	<string name="preferences_ndt">NDT</string>
	<string name="preferences_ndt_sum">Activate extended measurement</string>
	<string name="preferences_ic">Publish personal data</string>
	<string name="preferences_ipv4_only">IPv4 only</string>
	<string name="preferences_ipv4_only_sum">Never use IPv6</string>
	<string name="preferences_anonym_mode">Anonymous mode</string>
	<string name="preferences_anonym_mode_sum">Disassociate all measurements from client-UUID</string>
	<string name="preferences_category_developer">Development</string>
	<string name="preferences_category_loop_mode">Loop mode</string>
	<string name="preferences_category_developer_control_server">Control server</string>
	<string name="preferences_category_developer_map_server">Map server</string>
	<string name="preferences_category_developer_qos_server">QoS server</string>
	<string name="preferences_category_developer_debug">Debugging</string>
	<string name="preferences_dev_control_override">Override control server</string>
	<string name="preferences_dev_control_override_sum">Activate custom settings for control server</string>
	<string name="preferences_dev_control_host">Control host</string>
	<string name="preferences_dev_control_host_sum">Override URL of control server</string>
	<string name="preferences_dev_control_port">Control port</string>
	<string name="preferences_dev_control_port_sum">Override port of control server</string>
	<string name="preferences_dev_control_ssl">Control server SSL</string>
	<string name="preferences_dev_control_ssl_sum">Use encrypted connection to control server</string>
	<string name="preferences_dev_map_override">Override map server</string>
	<string name="preferences_dev_map_override_sum">Activate custom settings for map server</string>
	<string name="preferences_dev_map_host">Map host</string>
	<string name="preferences_dev_map_host_sum">Override URL of map server</string>
	<string name="preferences_dev_map_port">Map port</string>
	<string name="preferences_dev_map_port_sum">Override port of map server</string>
	<string name="preferences_dev_map_ssl">Map server SSL</string>
	<string name="preferences_dev_map_ssl_sum">Use encrypted connection to map server</string>
	<string name="preferences_dev_qos_ssl" >QoS server SSL</string>
	<string name="preferences_dev_qos_ssl_sum" >Use encrypted connection to QoS server</string>
	<string name="preferences_dev_debug_sysout" >Store error output in file</string>
	<string name="preferences_dev_debug_sysout_sum" >Stores error output in a text file located in the "qosdebug" folder</string>
	<string name="menu_button_start">Start</string>
	<string name="menu_button_start_again">Run\nagain</string>
	<string name="menu_button_start_again_details">Run again</string>
	<string name="menu_button_title_page">Home</string>
	<string name="menu_button_map">Map</string>
	<string name="menu_button_history">History</string>
	<string name="menu_button_help">Help</string>
	<string name="menu_button_statistics">Statistics</string>
	<string name="menu_button_settings">Settings</string>
	<string name="menu_button_about">Info</string>
	<string name="menu_button_log">Logging</string>
	<string name="menu_button_share">Share</string>
	<string name="menu_button_netstat">Netstat</string>
	<string name="news_title">News</string>
	<string name="news_no_message">No new message.</string>
	<string name="about_version_title">Version</string>
	<string name="about_clientid_title">Client UUID</string>
	<string name="about_clientid_toast">Client UUID has been copied to clipboard.</string>
	<string name="about_web_title">Web</string>
	<string name="about_email_title">E-mail</string>
	<string name="about_email_sending">Sending e-mail…</string>
	<string name="about_terms_title">Privacy Policy</string>
	<string name="about_terms_line1">Privacy Policy and Terms of Use</string>
	<string name="about_git_title" translatable="false">Git Repository</string>
	<string name="about_git_line1" translatable="false">https://github.com/alladin-IT/open-rmbt</string>
	<string name="about_git_link" translatable="false">https://github.com/alladin-IT/open-rmbt</string>
	<string name="about_dev_title">Development</string>
	<string name="about_dev_line1" translatable="false">alladin-IT GmbH</string>
	<string name="about_dev_line2" translatable="false">https://alladin.at</string>
	<string name="about_dev_link" translatable="false">https://alladin.at</string>
	<string name="about_gms_legal_title">Google Play</string>
	<string name="about_gms_legal_line1">Google Play Services Legal Notice</string>
	<string name="about_test_counter_title">Test Counter</string>
	<string name="terms">Privacy Policy and Terms of Use</string>
	<string name="terms_accept_button">I agree</string>
	<string name="terms_accept_button_continue">Continue</string>
	<string name="terms_decline_button">Decline</string>
	<string name="terms_switch_to_settings">Directly to settings</string>
	<string name="terms_ic_header">Publish personal data</string>
	<string name="terms_ic_accept_text"><b>Publish personal data.</b></string>
	<string name="terms_ndt_header">Optional, more comprehensive NDT-Test</string>
	<string name="terms_ndt_accept_text"><b>I wish to run the optional NDT-Test.</b></string>
	<string name="terms_ndt_back_button">Back</string>
	<string name="terms_ndt_accept_button">Continue</string>
	<string name="loop_notification_ticker">Loop mode is active…</string>
	<string name="loop_notification_title">Loop mode active</string>
	<string name="loop_notification_text">Touch to cancel Loop mode</string>
	<string name="loop_started">Loop mode started.</string>
	<string name="loop_already_active">Loop mode is already active.</string>
	<string name="test_mbps">Mbit/s</string>
	<string name="test_ms">ms</string>
	<string name="test_dbm">dBm</string>
	<string name="test_location_km_h">km/h</string>
	<string name="test_location_m">m</string>
	<string name="test_location_sat">satellites</string>
	<string name="test_location_gps">GPS</string>
	<string name="test_location_network">Network</string>
	<string name="test_location_dir_n">N</string>
	<string name="test_location_dir_e">E</string>
	<string name="test_location_dir_s">S</string>
	<string name="test_location_dir_w">W</string>
	<string name="test_notification_text">Measurement is still running in the background.</string>
	<string name="test_dialog_error_title">Error…</string>
	<string name="test_dialog_error_text">There has been an error during measurement.</string>
	<string name="test_dialog_error_control_server_conn">Connection to test server cannot be established.</string>
	<string name="test_toast_error_text_qos">Error during QoS measurement.</string>
	<string name="test_dialog_abort_title">Abort…</string>
	<string name="test_dialog_abort_text">Do you really want to cancel ongoing measurement?</string>
	<string name="test_dialog_abort_yes">Cancel measurement</string>
	<string name="test_dialog_abort_no">Continue measurement</string>
	<string name="history_button_sync">Sync</string>
	<string name="history_button_filter">Filter</string>
	<string name="history_device">Device</string>
	<string name="history_type">Access</string>
	<string name="history_date">Date</string>
	<string name="history_down">Down\nMbit/s</string>
	<string name="history_up">Up\nMbit/s</string>
	<string name="history_ping">Ping\nms</string>
	<string name="history_filter">Filter</string>
	<string name="history_filter_networks">Network Type</string>
	<string name="history_filter_devices">Device</string>
	<string name="history_filter_result_number">Number of Results</string>
	<string name="history_filter_result_number_25">Show only 25 newest results</string>
	<string name="history_context_menu_delete">Remove this measurement?</string>
	<string name="history_delete_item_progress_info">Request is being processed by the server. Please wait...</string>
	<string name="history_delete_item_progress_title">Disassociation</string>
	<string name="preferences_dont_show_menu_on_exit">No menu on close</string>
	<string name="preferences_dont_show_menu_on_exit_sum">Don\'t show application menu before closing app.</string>
	<string name="title_screen_cpu">CPU</string>
	<string name="title_screen_ram">RAM</string>
	<string name="title_screen_ipv4">IPv4</string>
	<string name="title_screen_ipv6">IPv6</string>
	<string name="title_screen_traffic_info">Traffic</string>
	<string name="title_screen_location_info">Location</string>
</resources>