<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013-2015 alladin-IT GmbH
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        
        <PreferenceCategory android:key="preference_category_test" android:title="@string/preferences_category_test" android:layout="@layout/preferences_category">
            
            <CheckBoxPreference
                android:visibility="gone"
                android:key="ndt"
                android:title="@string/preferences_ndt" 
                android:summary="@string/preferences_ndt_sum"
                android:defaultValue="false"
                android:layout="@layout/preferences_item"/>

            <CheckBoxPreference
                android:key="information_commissioner"
                android:title="@string/preferences_ic" 
                android:defaultValue="false"
                android:layout="@layout/preferences_item"/>

            <Preference
                android:key="location_settings"
                android:title="@string/preferences_location_settings"
                android:summary="@string/preferences_location_settings_sum"
                android:layout="@layout/preferences_item"
                 />

            <CheckBoxPreference
                android:key="dont_show_menu_before_exit"
                android:title="@string/preferences_dont_show_menu_on_exit" 
                android:summary="@string/preferences_dont_show_menu_on_exit_sum"
                android:defaultValue="false"
                android:layout="@layout/preferences_item" />

            <CheckBoxPreference
                android:key="nerd_mode"
                android:title="@string/preferences_nerd_mode"
                android:summary="@string/preferences_nerd_mode_sum"
                android:defaultValue="false"
                android:layout="@layout/preferences_item" />

            <CheckBoxPreference
                android:key="ipv4_only"
                android:title="@string/preferences_ipv4_only"
                android:summary="@string/preferences_ipv4_only_sum"
                android:defaultValue="false"
                android:layout="@layout/preferences_item"/>

            <CheckBoxPreference
                android:key="enable_qos"
                android:title="@string/preferences_enable_qos"
                android:summary="@string/preferences_enable_qos_sum"
                android:defaultValue="false"
                android:layout="@layout/preferences_item" />

        </PreferenceCategory>
    </PreferenceScreen>
