<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2015 SPECURE GmbH
   
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
   
      http://www.apache.org/licenses/LICENSE-2.0
   
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_background"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical" >

    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/divider_horizontal" />
    </FrameLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:divider="@drawable/divider_vertical"
        android:dividerPadding="1dp"
        android:orientation="horizontal"
        android:padding="1dp"
        android:showDividers="middle" >

        <LinearLayout
            android:id="@+id/title_page_stats_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/layout_bg_selector"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal" >

                <TextView
                    style="@style/QoSTheme.TextView.Medium.TitlePage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight=".4"
                    android:gravity="right"
                    android:text="@string/title_screen_cpu" />

                <TextView
                    android:id="@+id/cpu_status"
                    style="@style/QoSTheme.TextView.Medium.TitlePage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:paddingLeft="12dp"
                    android:text="100%" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/QoSTheme.TextView.Medium.TitlePage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight=".4"
                    android:gravity="right"
                    android:text="@string/title_screen_ram" />

                <TextView
                    android:id="@+id/ram_status"
                    style="@style/QoSTheme.TextView.Medium.TitlePage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:paddingLeft="12dp"
                    android:text="100%" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/title_page_ip_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/layout_bg_selector"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal" >

                <TextView
                    style="@style/QoSTheme.TextView.Medium.TitlePage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/title_screen_ipv4" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/ipv4_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:focusable="false"
                        android:paddingLeft="8dp"
                        android:src="@drawable/traffic_lights_grey"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/ipv4_status_progress_bar"
                        style="@android:style/Widget.ProgressBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:focusable="false"
                        android:paddingLeft="8dp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/QoSTheme.TextView.Medium.TitlePage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/title_screen_ipv6" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/ipv6_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:focusable="false"
                        android:paddingLeft="8dp"
                        android:src="@drawable/traffic_lights_grey"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/ipv6_status_progress_bar"
                        style="@android:style/Widget.ProgressBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:focusable="false"
                        android:paddingLeft="8dp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
			android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/divider_horizontal" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:dividerPadding="1dp"
        android:orientation="horizontal"
        android:padding="1dp"
        android:showDividers="middle" >

        <RelativeLayout
            android:id="@+id/title_page_traffic_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/layout_bg_selector"
            android:clickable="true" >

            <LinearLayout
                android:id="@+id/traffic_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:paddingTop="7dp" >

                <ImageView
                    android:id="@+id/traffic_dl_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:paddingRight="10dp"
                    android:src="@drawable/traffic_speed_none"
                    android:tint="@color/titlepage_tint" />

                <ImageView
                    android:id="@+id/traffic_ul_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:rotation="180"
                    android:src="@drawable/traffic_speed_none"
                    android:tint="@color/titlepage_tint" />
            </LinearLayout>

            <TextView
                style="@style/QoSTheme.TextView.Medium.TitlePage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:paddingBottom="2dp"
                android:fontFamily=""
                android:text="@string/title_screen_traffic_info" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/title_page_location_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/layout_bg_selector"
            android:clickable="true" >

            <at.alladin.rmbt.android.views.AlladinTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/titlepage_tint"
                android:text="j"
                android:textSize="35dp"
                />
            <ImageView
                android:id="@+id/location_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:clickable="false"
                android:focusable="false"
                android:paddingTop="10dp"
                android:src="@drawable/ic_action_location_found"
                android:tint="@color/titlepage_tint" />

            <TextView
                style="@style/QoSTheme.TextView.Medium.TitlePage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:paddingBottom="2dp"
                android:text="@string/title_screen_location_info" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/title_page_start_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/start_button_bg_selector" >

        <TextView
            android:id="@+id/title_page_start_button_text"
            style="@style/Alladin.StartScreen.StartButton.Active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/menu_button_start" />
    </RelativeLayout>

</LinearLayout>